[#]申请审核以及主页显示待办

--- a/web/resource/css/bootstrap.css
+++ b/web/resource/css/bootstrap.css
@@ -1425,7 +1425,7 @@ ol ol {
 }
 .list-unstyled {
   padding-left: 0;
-  list-style: none;
+  /*list-style: none;*/
 }
 .list-inline {
   padding-left: 0;
