--- a/web/resource/css/blog.css
+++ b/web/resource/css/blog.css
@@ -112,6 +112,7 @@ h6, .h6 {
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 4px;
+  margin-right: -52px;
 }
 .sidebar-module-inset p:last-child,
 .sidebar-module-inset ul:last-child,
